infrastructure/k8s/retail-app/catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
  namespace: retail-app
  labels:
    app: catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: catalog
          image: public.ecr.aws/aws-containers/retail-store-sample-catalog:0.8.5
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: 256m
              memory: 256Mi
            limits:
              memory: 256Mi
          volumeMounts:
            - mountPath: /tmp
              name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
---
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: retail-app
spec:
  selector:
    app: catalog
  ports:
    - port: 80
      targetPort: 8080
