infrastructure/k8s/retail-app/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: retail-app
  labels:
    app: ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: ui
          image: public.ecr.aws/aws-containers/retail-store-sample-ui:0.8.5
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: 128m
              memory: 512Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - mountPath: /tmp
              name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: retail-app
spec:
  selector:
    app: ui
  ports:
    - port: 80
      targetPort: 8080
